--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hurricane",
   "version": "1.0.0",
   "description": "This applications serves as a Sorare companion, helping the user manage their incomes/outcomes, their NBA and Football cards, and their auctions/listings.",
-  "main": "homePage.js",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
