--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto": "^1.0.1",
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
+    "json": "^11.0.0",
     "math": "^0.0.3",
     "websocket-client": "^1.0.0",
     "yargs": "^17.7.1"
